tests/baselines/reference/parserMemberAccessorDeclaration12(target=es2015).errors.txt
parserMemberAccessorDeclaration12.ts(2,8): error TS1054: A 'get' accessor cannot have parameters.
parserMemberAccessorDeclaration12.ts(2,8): error TS2378: A 'get' accessor must return a value.


==== parserMemberAccessorDeclaration12.ts (2 errors) ====
    class C {
       get Foo(a: number) { }
           ~~~
!!! error TS1054: A 'get' accessor cannot have parameters.
           ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }